Devlog: UI kit, patterns, levels

--- a/index.html
+++ b/index.html
@@ -20,7 +20,33 @@
         </div>
       </header>
 
+      <section class="list" aria-label="live demos">
+        <article class="item">
+          <div class="meta">Live</div>
+          <a class="title" href="https://tape-os-site.vercel.app/" target="_blank" rel="noreferrer">tape OS — витрина</a>
+          <p class="excerpt">Универсальная публичная страница (без крипто/трейдинг деталей).</p>
+        </article>
+
+        <article class="item">
+          <div class="meta">Live</div>
+          <a class="title" href="https://tape-os-arcade.vercel.app/" target="_blank" rel="noreferrer">Inbox Sprint (arcade)</a>
+          <p class="excerpt">Мини‑игра как стресс‑тест: ship → прод → ссылка.</p>
+        </article>
+
+        <article class="item">
+          <div class="meta">Live</div>
+          <a class="title" href="https://tape-os-racer.vercel.app/" target="_blank" rel="noreferrer">Neon Sprint (racer)</a>
+          <p class="excerpt">Ещё один стресс‑тест скорости и стабильности доставки.</p>
+        </article>
+      </section>
+
       <section class="list" aria-label="posts">
+        <article class="item">
+          <div class="meta">2026‑02‑11</div>
+          <a class="title" href="./posts/2026-02-11-ui-kit-levels-patterns.html">UI kit, /ui, /patterns и уровни Next.js</a>
+          <p class="excerpt">Премиальный UI по умолчанию + галерея компонентов + секции лендинга + levels 1–4.</p>
+        </article>
+
         <article class="item">
           <div class="meta">2026‑02‑11</div>
           <a class="title" href="./posts/2026-02-11-ship-and-arcade.html">Ship-пайплайн и первые публичные демо</a>
