Devlog: add kit demo link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       <section class="list" aria-label="live demos">
         <article class="item">
           <div class="meta">Live</div>
+          <a class="title" href="https://tape-os-kit-demo-20260211-164917-ccg49lr7v.vercel.app/" target="_blank" rel="noreferrer">Kit demo (Level 4)</a>
+          <p class="excerpt">Внутри: /ui и /patterns + onboarding/state/metrics. Это тест обновлённых шаблонов.</p>
+        </article>
+
+        <article class="item">
+          <div class="meta">Live</div>
           <a class="title" href="https://tape-os-site.vercel.app/" target="_blank" rel="noreferrer">tape OS — витрина</a>
           <p class="excerpt">Универсальная публичная страница (без крипто/трейдинг деталей).</p>
         </article>
