Devlog: landing presets + guardrails + next patch

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
       <section class="list" aria-label="posts">
         <article class="item">
           <div class="meta">2026‑02‑11</div>
+          <a class="title" href="./posts/2026-02-11-landing-presets-guardrails.html">Landing presets + guardrails + обновление Next</a>
+          <p class="excerpt">Пресеты /landing/a и /landing/b + защита от сборочных грабель + next@14.2.30.</p>
+        </article>
+
+        <article class="item">
+          <div class="meta">2026‑02‑11</div>
           <a class="title" href="./posts/2026-02-11-ui-kit-levels-patterns.html">UI kit, /ui, /patterns и уровни Next.js</a>
           <p class="excerpt">Премиальный UI по умолчанию + галерея компонентов + секции лендинга + levels 1–4.</p>
         </article>
